# sirius_tbank_recsys_2024

./: README.md  pyproject.toml
notebooks/: lightgbm_ranking.ipynb
